--- a/css/controls.css
+++ b/css/controls.css
@@ -412,7 +412,7 @@
 .mini-knob-inner {
     width: 78px;
     height: 78px;
-    background: conic-gradient(#1a1a1a, #333, #1a1a1a, #444, #1a1a1a);
+    background: conic-gradient(#fa9b1e, #c08231, #fa9b1e, #c08231, #fa9b1e);
     border-radius: 50%;
     pointer-events: none;
 }
