--- a/css/root.css
+++ b/css/root.css
@@ -1,7 +1,7 @@
 :root {
     --release-number: "Limited Edition";
-    --background-color-app: #2c2626;
-    --chassis-shadow: #ffffff;
+    --background-color-app: #413d3d;
+    --chassis-shadow: #999999;
     --mc-blue: #00c3ff;
     --mc-green: #f8f8f8;
     --panel-black: #fa9b1e;
