--- a/css/controls.css
+++ b/css/controls.css
@@ -36,18 +36,18 @@
     height: 160px;
     background: linear-gradient(145deg,
             #ffffff 0%,
-            #e0e0e0 20%,
+            #ebebeb 20%,
             #858585 45%,
             #999999 50%,
-            #e0e0e0 80%,
+            #ebebeb 80%,
             #ffffff 100%);
-    border: 2px solid #b0b0b0;
+    border: 3px solid #e98a0e;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow:
-        0 8px 8px rgba(107, 107, 107, 0.5);
+        0 0px 0px rgba(107, 107, 107, 0.5);
     flex-shrink: 0;
 }
 
@@ -387,18 +387,18 @@
     height: 100px;
     background: linear-gradient(145deg,
            #ffffff 0%,
-            #e0e0e0 20%,
+            #ebebeb 20%,
             #858585 45%,
             #999999 50%,
-            #e0e0e0 80%,
+            #ebebeb 80%,
             #ffffff 100%);
-    border: 2px solid #b0b0b0;
+    border: 3px solid #e98a0e;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow:
-        0 8px 8px rgba(107, 107, 107, 0.5);
+        0 0px 0px rgba(107, 107, 107, 0.5);
     flex-shrink: 0;
     cursor: pointer;
     transition: transform 0.1s ease;
